gcc/testsuite/rust/compile/no_core_feature_gate.rs
#![no_core] // { dg-error "no_core is experimental" }

fn main() {}
